--- a/pgbouncer/values.yaml
+++ b/pgbouncer/values.yaml
@@ -11,6 +11,9 @@ replicasCount: 2
 username: ""
 password: ""
 host: ""
+sslCert: ""
+sslKey: ""
+sslRootCert: ""
 hostPort: 5432
 
 ## The Kubernetes service type to expose PgBouncer with.  Use ClusterIP for security, LoadBalancer for dev deployments you want to connect to from outside the cluster.
@@ -60,14 +63,6 @@ injectConfig: {}
 ## These values are set as both the requests and limits on all PgBouncer pods.
 cpu: 150m
 memory: 200Mi
-
-## Node selector
-##
-## e.g. "role: worker-general"
-## It is a good idea to have a node pool that only runs PgBouncers and to use this selector to schedule them there.
-nodeSelector:
-  null
-  ##role: proxies
 
 ## Probe (health check) configuration.
 ## If username and password aren't configured, they are defaulted as the global username and password.
